loft/loft-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: loft-ingress
  namespace: loft
spec:
  rules:
  - host: lost.techlabenterprises.com
    http:
      paths:
      - backend:
          service:
            name: loft
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
